package xget.dev.jet.core.utils

object TestTags {

    const val SHOW_PASSWORD_ICON = "show_password_btn"
    const val LOGIN_SCREEN = "test_tag_login_screen"
    const val GO_TO_REGISTER_SCREEN = "test_tag_go_to_register_screen"
    const val GO_TO_FORGOT_PASSWORD_SCREEN = "test_tag_go_to_forgot_password_screen"

    const val HOME_SCREEN = "test_tag_home_screen"
    const val GO_TO_ADD_DEVICE_SCREEN = "test_tag_go_to_add_device_screen"
    const val DEVICE_TYPE_ITEM = "test_tag_device_type_item"
    const val DEVICE_NAME_TEXT_FIELD = "test_tag_device_name_text_field"
    const val GO_TO_ADD_DEVICE_STEP_2_BTN = "GO_TO_ADD_DEVICE_STEP_2"
    const val GO_TO_ADD_DEVICE_STEP_3_BTN = "GO_TO_ADD_DEVICE_STEP_3"

    const val USER_WIFI_PASSWORD_TEXT_FIELD = "USER_WIFI_PASSWORD_TEXT_FIELD"

    const val USER_WIFI_SSID_TEXT_FIELD = "USER_WIFI_SSID_TEXT_FIELD"

    const val SMART_DEVICE_ITEM = "SMART_DEVICE_ITEM"
    const val SMART_DEVICE_HISTORY_ITEM = "SMART_DEVICE_HISTORY_ITEM"
    const val DEVICE_DETAIL_SCREEN = "DEVICE_DETAIL_SCREEN"

    const val SEARCH_DEVICES_STEPPER = "SEARCH_DEVICES_STEPPER"

    const val HISTORY_NAV_HOST_ICON = "HISTORY_NAV_HOST_ICON"


}